2001-02-17  Joseph S. Myers  <jsm28@cam.ac.uk>

	* gcc.texi, invoke.texi: Link to GCC 3.0 version of
	c99status.html.

2001-02-16  Richard Henderson  <rth@redhat.com>
	    DJ Delorie  <dj@redhat.com>

	* jump.c (jump_optimize_1): When we delete a conditional jump
	preceeding a non-conditional jump to effectively the same place,
	make sure that the combined jump skips any clobber insns between
	the two labels.

2001-02-16  Jason Merrill  <jason@redhat.com>

	* dwarf2out.c (add_bound_info): Don't crash if SAVE_EXPR_RTL is
	NULL.
	(gen_subprogram_die): Don't abort on seeing a second definition if 
	the previous one was abstract.  Don't replace an abstract instance
	in the lookup table.

	* dwarf2out.c (dwarf2out_abstract_function): Rename from
	gen_abstract_function.
	* dwarf2out.h: Declare it.
	* toplev.c (note_outlining_of_inline_function): New fn.
	* toplev.h: Declare it.
	* integrate.c (output_inline_function): Call it.
	* c-decl.c (duplicate_decls): Call it when redefining an extern
	inline.  Don't inline the new defn.

	* tree.h (BLOCK_CHAIN): Use BLOCK_CHECK.

2001-02-16  Jakub Jelinek  <jakub@redhat.com>

	* objc/objc-act.c (start_class): Register implemented_classes with
	GC.

2001-02-16  Neil Booth  <neil@daikokuya.demon.co.uk>

        * cppfiles.c (_cpp_make_system_header): Generate a file
        change callback.

Thu Feb 15 21:30:26 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>

	* flow.c (tidy_fallthru_edge): Never end block on line number NOTE.

	* function.c (assign_parms): Set RTX_UNCHANGING_P in pseudo when we
	do in memory.

2001-02-15  Gerald Pfeifer  <pfeifer@dbai.tuwien.ac.at>

	* version.c: Bump to "3.0 20010215 (prerelease)".
	
Thu Feb 15 15:15:29 2001  Alexandre Oliva  <aoliva@redhat.com>

	* config/sh/sh.h (BOOL_TYPE_SIZE): Don't define.

Thu Feb 15 00:20:31 CET 2001  Jan Hubicka  <jh@suse.cz>

	* i386.h (RETURN_IN_MEMORY): Fix formating; reject TFmodes

	* invoke.texi (-mreg-alloc): Deprecate.
