@@ -1,3 +1,8 @@
+2001-02-17  Richard Henderson  <rth@redhat.com>
+
+	* reload1.c (reload_cse_simplify_set): Respect LOAD_EXTEND_OP
+	when replacing a memory load with a register.
+
 2001-02-17  Joseph S. Myers  <jsm28@cam.ac.uk>
 
 	* gcc.texi, invoke.texi: Link to GCC 3.0 version of
